# cpp-client

./: .gitmodules  CMakeLists.txt  README.md  codecov.yml
.github/workflows/: linux.yml
scripts/ci/: actions-install-linux.sh  get_code_cov.sh
src/clientlib/: CMakeLists.txt  client.cpp  client.h  clientlib_global.h
src/clientlib/proto/clarifai/analytics/: resources.pb.cc  resources.pb.h  service.grpc.pb.cc  service.grpc.pb.h  service.pb.cc  service.pb.h
src/clientlib/proto/clarifai/api/: resources.pb.cc  resources.pb.h  service.grpc.pb.cc  service.grpc.pb.h  service.pb.cc  service.pb.h
src/clientlib/proto/clarifai/api/status/: status.grpc.pb.cc  status.grpc.pb.h  status.pb.cc  status.pb.h  status_code.grpc.pb.cc  status_code.grpc.pb.h  status_code.pb.cc  status_code.pb.h
src/clientlib/proto/clarifai/api/utils/: extensions.pb.cc  test_proto.pb.cc
src/clientlib/proto/clarifai/auth/scope/: scope.grpc.pb.cc  scope.grpc.pb.h  scope.pb.cc  scope.pb.h
src/clientlib/proto/clarifai/auth/types/: types.grpc.pb.cc  types.grpc.pb.h  types.pb.cc  types.pb.h
src/clientlib/proto/clarifai/auth/util/: extension.grpc.pb.cc  extension.grpc.pb.h  extension.pb.cc  extension.pb.h
src/clientlib/proto/clarifai/bulk_data_service/: resources.grpc.pb.cc  resources.grpc.pb.h  resources.pb.cc  resources.pb.h  service.grpc.pb.cc  service.grpc.pb.h  service.pb.cc  service.pb.h
src/clientlib/proto/clarifai/commands/: commands.pb.cc  commands.pb.h
src/clientlib/proto/clarifai/sdk/utils/: system_config.grpc.pb.cc  system_config.grpc.pb.h  system_config.pb.cc  system_config.pb.h
src/clientlib/proto/clarifai/sdk_billing/: resources.pb.cc  resources.pb.h  service.grpc.pb.cc  service.grpc.pb.h  service.pb.cc  service.pb.h
src/clientlib/proto/clarifai/usage/: event.grpc.pb.cc  event.grpc.pb.h  event.pb.cc  event.pb.h
src/clientlib/proto/clarifai/utils/jsonpb/: test.grpc.pb.cc  test.grpc.pb.h  test.pb.cc  test.pb.h
src/clientlib/proto/color/: color.grpc.pb.cc  color.grpc.pb.h  color.pb.cc  color.pb.h
src/clientlib/proto/concept_mapping/: service.grpc.pb.cc  service.grpc.pb.h  service.pb.cc  service.pb.h
src/clientlib/proto/concept_trainer_dump/: concept_trainer_dump.grpc.pb.cc  concept_trainer_dump.grpc.pb.h  concept_trainer_dump.pb.cc  concept_trainer_dump.pb.h
src/clientlib/proto/config_runner/: config_runner.grpc.pb.cc  config_runner.grpc.pb.h  config_runner.pb.cc  config_runner.pb.h
src/clientlib/proto/databatch_generator/: databatch_generator.grpc.pb.cc  databatch_generator.grpc.pb.h  databatch_generator.pb.cc  databatch_generator.pb.h
src/clientlib/proto/evaluation/: classification.grpc.pb.cc  classification.grpc.pb.h  classification.pb.cc  classification.pb.h  detection.grpc.pb.cc  detection.grpc.pb.h  detection.pb.cc  detection.pb.h  evaluation.grpc.pb.cc  evaluation.grpc.pb.h  evaluation.pb.cc  evaluation.pb.h  ocr.grpc.pb.cc  ocr.grpc.pb.h  ocr.pb.cc  ocr.pb.h
src/clientlib/proto/health_check/: health_check.grpc.pb.cc  health_check.grpc.pb.h  health_check.pb.cc  health_check.pb.h
src/clientlib/proto/inference_coordinator/: inference_coordinator.grpc.pb.cc  inference_coordinator.grpc.pb.h  inference_coordinator.pb.cc  inference_coordinator.pb.h
src/clientlib/proto/knowledge_graph/: kg_py_service.grpc.pb.cc  kg_py_service.grpc.pb.h  kg_py_service.pb.cc  kg_py_service.pb.h
src/clientlib/proto/lopq/: lopq_service.grpc.pb.cc  lopq_service.grpc.pb.h  lopq_service.pb.cc  lopq_service.pb.h
src/clientlib/proto/predictor/: predictor.grpc.pb.cc  predictor.grpc.pb.h  predictor.pb.cc  predictor.pb.h  predictor_metrics.grpc.pb.cc  predictor_metrics.grpc.pb.h  predictor_metrics.pb.cc  predictor_metrics.pb.h
src/clientlib/proto/py_media_processor/: py_media_processor.grpc.pb.cc  py_media_processor.grpc.pb.h  py_media_processor.pb.cc  py_media_processor.pb.h
src/clientlib/proto/spire/: spire.grpc.pb.cc  spire.grpc.pb.h  spire.pb.cc  spire.pb.h  spire_service.grpc.pb.cc  spire_service.grpc.pb.h  spire_service.pb.cc  spire_service.pb.h
src/clientlib/proto/trainer/: trainer.grpc.pb.cc  trainer.grpc.pb.h  trainer.pb.cc  trainer.pb.h
src/clientlib/proto/utils/: audio.grpc.pb.cc  audio.grpc.pb.h  audio.pb.cc  audio.pb.h  bbox.grpc.pb.cc  bbox.grpc.pb.h  bbox.pb.cc  bbox.pb.h  boundingbox.grpc.pb.cc  boundingbox.grpc.pb.h  boundingbox.pb.cc  boundingbox.pb.h  caption.grpc.pb.cc  caption.grpc.pb.h  caption.pb.cc  caption.pb.h  checkpoint.grpc.pb.cc  checkpoint.grpc.pb.h  checkpoint.pb.cc  checkpoint.pb.h  color_result.grpc.pb.cc  color_result.grpc.pb.h  color_result.pb.cc  color_result.pb.h  data_example.grpc.pb.cc  data_example.grpc.pb.h  data_example.pb.cc  data_example.pb.h  data_provider.grpc.pb.cc  data_provider.grpc.pb.h  data_provider.pb.cc  data_provider.pb.h  databatch.grpc.pb.cc  databatch.grpc.pb.h  databatch.pb.cc  databatch.pb.h  databatch_generator.grpc.pb.cc  databatch_generator.grpc.pb.h  databatch_generator.pb.cc  databatch_generator.pb.h  (+84 more)
src/tests/: CMakeLists.txt  tests_predict.cpp
